# JPEGENC

./: .gitignore
linux/c/: CMakeLists.txt  JPEGENC.h  Makefile  jpegenc.c  main.c  rgb565.h  rgb565_bmp.h
linux/cpp/: Makefile  main.cpp
tests/: array2file.c
